--- a/mailit/templates/mailit/base.html
+++ b/mailit/templates/mailit/base.html
@@ -93,8 +93,8 @@
         <!-- Email List Starts -->
         <div class="emailList">
             <!-- Settings Starts -->
-            <div class="emailList__settings">
-                {% block settings %}
+            <div class="emailList__settings" style="padding-top: 0px;padding-bottom: 0px;padding-left: 0px;padding-right: 0px;">
+                {% block emailList__settings %}
                 <div class="emailList__settingsLeft">
                     <input type="checkbox" />
                     <span class="material-icons"> arrow_drop_down </span>
@@ -107,7 +107,7 @@
                     <span class="material-icons"> keyboard_hide </span>
                     <span class="material-icons"> settings </span>
                 </div>
-                {% endblock settings %}
+                {% endblock emailList__settings %}
             </div>
             <!-- Settings Ends -->
             <div class="content">
